# M3DC1

./: README.md  readme.txt
doc/: M3DC1.tex  building.tex  doc.tex  inputs.tex  mesh-gen.tex  numerical_methods.tex  petsc_option.tex  physics-model.tex  running_jobs.tex  scorec-api.tex
m3dc1_scorec/api/: m3dc1_scorec.cc  m3dc1_scorec.h  name_convert.h
m3dc1_scorec/config-files/: spark-cplx-config.sh  spark-real-config.sh
m3dc1_scorec/include/: m3dc1_matrix.h  m3dc1_mesh.h  m3dc1_model.h
m3dc1_scorec/src/: m3dc1_matrix.cc  m3dc1_mesh.cc  m3dc1_model.cc
meshgen/: CMakeLists.txt
meshgen/test/: simToM3dc1.cc  sim_meshgen.cc
meshgen/test/data/sim-parasolid-testcase/: STAR_5_00_surface.smd  STAR_5_00_surface.sms  input  readme.md
unstructured/: CMakeLists.txt  M3Dmodules.f90  auxiliary_fields.f90  biharmonic.f90  bootstrap.f90  diagnostics.f90  electric_field.f90  flux.mk  gradshafranov.f90  hdf5_output.f90  init_common.f90  init_vmec.f90  input.f90  ludef_t.f90  m3dc1_nint.f90  makefile  metricterms_new.f90  mit_gcc.mk  model.f90  newpar.f90  newvar.f90  nintegrate_mod.f90  output.f90  particle.f90  perlmutter_cpu_gcc.mk  resistive_wall.f90  restart_hdf5.f90  rmp.f90  runaway.f90  runaway_advection.f90  scorec_mesh.f90  signal_handler.f90  target.mk  time_step.f90  time_step_split.f90  time_step_unsplit.f90  transport.f90
unstructured/README/: readme.flux
unstructured/idl/: read_field.pro  read_quad_points.pro
unstructured/idl/python/: AGENTS.md
unstructured/idl/python/m3dc1/: __init__.py  contour_and_legend.py  eval.py  eval_field.py  extend_profile.py  extract_profiles.py  field_at_point.py  field_spectrum.py  flux_average.py  flux_average_field.py  flux_coordinates.py  get_lcfs.py  get_slice_time.py  lcfs.py  plot_coils.py  plot_field.py  plot_field_spectrum.py  plot_field_vs_phi.py  plot_flux_average.py  plot_flux_contour.py  plot_hmn.py  plot_lcfs.py  plot_legend.py  plot_mag_probes.py  plot_mesh.py  plot_poincare.py  plot_scalar.py  plot_shape.py  plot_signals.py  plot_wall_regions.py  radius_matrix.py  read_coil_data.py  read_field.py  read_field_ntor.py  read_field_spectrum.py  read_hmn.py  read_lcfs.py  read_mesh.py  read_poincare.py  read_scalar.py  (+4 more)
unstructured/modules/perlmutter/m3dc1/: devel-cpu-gcc  devel-gpu-gcc
unstructured/python/m3dc1/: __init__.py  convert_meshgen_input.py  eigenfunction.py  eval_field.py  flux_average.py  fpylib.py  get_timetrace.py  plot_field.py  plot_field_vs_phi.py  plot_flux_average.py  plot_shape.py  plot_time_trace.py  poincare.py  resistive_scaling.py  time_trace_fast.py
unstructured/regtest/KPRAD_2D/base/: batchjob.perlmutter_cpu_gcc
unstructured/regtest/KPRAD_restart/base/: batchjob.perlmutter_cpu_gcc
unstructured/regtest/NCSX/base/: batchjob.perlmutter_cpu_gcc
unstructured/regtest/RMP/base/: C1input  batchjob.perlmutter_cpu_gcc
unstructured/regtest/RMP_nonlin/base/: C1input  batchjob.perlmutter_cpu_gcc
unstructured/regtest/adapt/base/: C1input  batchjob.perlmutter_cpu_gcc
unstructured/regtest/pellet/base/: batchjob.perlmutter_cpu_gcc
unstructured/solver_doc/: options_bjacobi  options_bjacobi_mumps  options_ilu_petsc_gmres  options_ilu_superlu_gmres  options_superlu_dist  readme.solver
unstructured/templates/: makefile
unstructured/templates/AUG/fw1_mesh/: makefile
unstructured/templates/AUG/rw1_mesh/: makefile
unstructured/templates/Circle/: makefile
unstructured/templates/Circle/circle_0.02/: input
unstructured/templates/Circle/circle_0.04/: input
unstructured/templates/Circle/circle_0.1/: input  makefile
unstructured/templates/DIII-D/fw1_mesh/: input
unstructured/templates/DIII-D/rw1_mesh/: input
unstructured/templates/NSTX/: makefile
unstructured/tutorials/Create_Multiregion_Mesh/: input
unstructured/tutorials/Linear_RMP/: batchjob.dawson
unstructured/tutorials/Linear_stability/: batchjob.dawson  batchjob.stellar
unstructured/tutorials/Meshgen/: Circle  analytic-input  input1  input2  input7  input8  readme
unstructured/tutorials/Parasolid_Meshgen/: circle-input  input3
unstructured/tutorials/Parasolid_Meshgen/sim-parasolid-testcase/: STAR_5_00_surface.x_b  STAR_5_00_surface_nat.x_t  input
unstructured/tutorials/Setup_EFIT_Equilibrium/: batchjob.dawson.adapt  batchjob.dawson.interpolate  batchjob.dawson.refine  batchjob.dawson.test  makefile
